   * Fixed trivial memory leak in vpool
   * Allow buying local maps where they are not sold
   * Buffed Hunting Combat AI to 15% bonus
   * Made Weakness Harmonizer AI not appear as an active outfit
   * Outfit Lua function onshoot has been renamed onshootany
   * Can toggle point defense weapons on and off
   * Player's new ships should start will all the default outfits, which fixes the some Sirius psychic tests
   * `chapter1`: event claims all the systems just in case
   * `poi`: renamed 'Pristine Derelict' to 'Unusual Derelict'
   * `poi_intro`: fixed typo
   * `achack03`: fixed mission not being acceptable and harja spawning forever
   * `achack04`: fixed missing formatting string

* 0.11.0-beta.1
   * Gameplay Changes
      * Universe significantly overworked to be more consistent with lore
         * More landable uninhabited spobs, unique locations, and things to discover
         * Reviewed and corrected many descriptions and placement of spobs and systems
         * More in-depth and fleshed out tag system for locations
      * Ship slots and mass limits reworked such that smaller ships get more utility/structural slots to work with
      * Point defense systems that can shoot down missiles and torpedoes
      * Space object (planets, stations, etc.) properties affect quantity of missions available
      * Moved many missions and events to the vn system
      * Can sometimes find POI events with a pulse scanner equipped when entering systems
      * Changed the visuals for some of the nebulas (PSO, Mizar)
      * Pirate bribes cost more depending on your fleet and are based on points not mass
      * Missions are introduced less all at once to the player
      * Blink drives are more flexible but use energy and generate heat
      * Razor class weapons have been completely reworked
      * Can steal more than one outfit from a ship with high boarding bonus
      * diy-nerds: improved reward
   * Quality of Life
      * Significantly improved autonav